--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body onload="alert('Hello, my name is iRock!');">
 
-    <div class="imageConatiner">
+    <div class="imageContainer">
         <img onclick="touchRock();" src="images/rock.png" alt="Rock" class="imageRock" id="rockImg">
     </div>
 
