--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
     <div class="imageContainer">
         <img onclick="touchRock();" src="images/rock.png" alt="Rock" class="imageRock" id="rockImg">
     </div>
-
+Albert
 </body>
 </html>
