--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       </div>
       <div class="field">
         Enter the date for the message to be shown:
-        <input id="date" name="date" type="text" size="10" onblur= "validateDate(this,document.getElementById('dateError'));"/>
+        <input id="date" name="date" type="text" size="10" onblur="validateDate(this,document.getElementById('dateError'));"/>
         <span id="dateError" class="error" />
       </div>
       <div class="field">
@@ -35,11 +35,13 @@
       </div>
       <div class="field">
         Enter your phone number:
-        <input id="phone" name="phone" type="text" size="12"/>
+        <input id="phone" name="phone" type="text" size="12" onblur="validatePhone(this,document.getElementById('phoneError'));"/>
+        <span id="phoneError" class="error"></span>
       </div>
       <div class="field">
         Enter your email address:
-        <input id="email" name="email" type="text" size="32"/>
+        <input id="email" name="email" type="text" size="32" onblur="validateEmail(this,document.getElementById('emailError'));"/>
+        <span id="emailError" class="error"></span>
       </div>
       <input type="button" value="Order Banner" onclick="placeOrder(this.form);"/>
     </form>
